--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </section>
             <section class="flex-sectionbig gray">
                 <div class="testo">
-                    
+
                 </div>
                 <div class="bigimg">
 
@@ -57,6 +57,31 @@
             </section>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <section class="footer-social-links">
+
+            </section>
+            <section class="footer-info">
+                <div class="column">
+
+                </div>
+                <div class="column">
+
+                </div>
+                <div class="column">
+
+                </div>
+                <div class="column">
+
+                </div>
+            </section>
+        </div>
+        <div class="subscribe">
+        <section>
+            
+        </section>
+        </div>
+    </footer>
 </body>
 </html>
